--- a/pages/p9/952865.md
+++ b/pages/p9/952865.md
@@ -1,4 +1,4 @@
-### 蚂蚁长成了大象 中美都想对蚂蚁集团下手(图)
+### 诡异美大选 委国总统前警卫：投票机可篡改结果(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="蚂蚁集团 上市 阿里巴巴集团 金融" src="https://img3.secretchina.com/pic/2020/9-24/p2782184a306136464-ss.jpg" style="height:337px; width:600px"/>
+ <p style="text-align:center">
+  <img alt="2020年11月6日，美国民众在密西根州底特律抗议2020年大选的点票欺诈。" src="https://img3.secretchina.com/pic/2020/11-7/p2812691a852589637-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   主要业务为金融服务的蚂蚁集团即将挂牌上市。（图片来源：Adobe Stock）
+   2020年11月6日，美国民众在密西根州底特律抗议2020年大选的点票欺诈。(图片来源: JEFF KOWALSKY/AFP via Getty Images)
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,83 +21,60 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月26日讯】（看中国记者李正鑫综合报导）和
+  【看中国2020年11月17日讯】日前
   <strong>
-   阿里巴巴集团
+   <span href="https://www.secretchina.com/news/gb/tag/委内瑞拉" target="_blank">
+    委内瑞拉
+   </span>
   </strong>
-  有关联、主要业务为
+  前总统的贴身警卫出面作证，指这次
   <strong>
-   金融
+   美国大选
   </strong>
-  服务的
+  中使用的Dominion
   <strong>
-   蚂蚁集团
+   投票机
   </strong>
-  即将挂牌
-  <strong>
-   上市
-  </strong>
-  。中国央行千方百计想对其加强控制，而有消息传
-  <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
-   川普
-  </span>
-  (特朗普)政府也要对其进行制裁。
+  ，能够篡改选票的结果。他透露，今年美国大选夜所发生的诡异情形，与委内瑞拉在2013年的大选中，借由投票机来改变选举结果的状况有惊人的相似，是投票软件决定了选举结果，而并非是选民。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  <strong>
-   <span href="https://www.secretchina.com" target="_blank">
-    中国
-   </span>
-   央行想办法将蚂蚁收至麾下
-  </strong>
- </p>
- <p>
-  蚂蚁科技集团股份有限公司，简称
-  <span href="https://zh.wikipedia.org/zh-cn/%E8%9A%82%E8%9A%81%E9%9B%86%E5%9B%A2" target="_blank">
-   蚂蚁集团
+  在美东时间11月16日，美国总统
+  <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
+   川普
   </span>
-  ，是中国的互联网
-  <span href="https://zh.wikipedia.org/zh-cn/%E9%87%91%E8%9E%8D" target="_blank">
-   金融
+  的律师、前联邦检察官西德尼‧鲍威尔（Sidney Powell）向外界公布称，有重要证人可以证明，Dominion投票机涉嫌改变了美国大选的结果。这个证人就是委内瑞拉前总统贴身国家安全警卫。
+ </p>
+ <p>
+  证人于证词中表示，在
+  <span href="https://www.secretchina.com/news/gb/tag/美国大选" target="_blank">
+   美国大选
   </span>
-  服务公司。蚂蚁集团起步于网上购物网站淘宝网第三方支付平台支付宝，2014年，
-  <span href="https://zh.wikipedia.org/zh-cn/%E9%98%BF%E9%87%8C%E5%B7%B4%E5%B7%B4%E9%9B%86%E5%9B%A2" target="_blank">
-   阿里巴巴集团
+  期间所发生的这些明目张胆的事，让他感到相当震惊，因为此种情况与2013年的委内瑞拉总统选举中，利用电子方式来更改选票的过程非常相似。
+ </p>
+ <p>
+  证人在证词中写道，在大选之夜，总共有5个使用Dominion系统软件（Smartmatic软件）的州，突然停止了计票工作。而在停止点票之时，川普的选票是明显领先的。但于（选举夜后的次日）凌晨，并没有投票发生，亦无
+  <span href="https://www.secretchina.com/news/gb/tag/投票机" target="_blank">
+   投票机
   </span>
-  分拆旗下金融业务，成立浙江蚂蚁小微金融服务集团股份有限公司（简称蚂蚁金服），2020年6月变更为蚂蚁集团。
+  报告离线的情形下，选情却发生了重大的改变。当投票报告于第二天早上恢复之时，投票结果发生了很明显的变化，投票结果已经转为支持川普的对手拜登了。
  </p>
  <p>
-  蚂蚁集团将有望10月初同时在香港交易所及上海证券交易所（上交所）科创板同步
-  <span href="https://zh.wikipedia.org/wiki/%E9%A6%96%E6%AC%A1%E5%85%AC%E5%BC%80%E5%8B%9F%E8%82%A1" target="_blank">
-   上市
-  </span>
-  。
+  2013年4月14日，证人就亲眼目睹了当时在委内瑞拉大选过程之中，使用了Smartmatic选举管理系统来操纵及改变选举的结果，最后使得马杜罗（NicolásMaduro）赢了对手拉登斯基（Capriles Radonsky）。
  </p>
  <p>
-  港台时间9月18日晚，
-  <span href="https://www.secretchina.com/news/gb/tag/蚂蚁集团" target="_blank">
-   蚂蚁集团
-  </span>
-  在上交所首发申请通过。从8月25日蚂蚁集团申请被上交所受理至今，审核过程只用了25天，过审速度仅次于中芯国际。
- </p>
- <p>
-  蚂蚁集团有望成为2020年全球规模最大的IPO（首次公开募股），市场一开始预测的IPO估值至少2000亿美元，后来又有传闻蚂蚁集团
-  <span href="https://www.secretchina.com/news/gb/tag/上市" target="_blank">
-   上市
-  </span>
-  的目标估值为2250亿美元，如今估值可能高达2500亿美元。
+  当时这名证人身处于加拉加斯控制中心的一个控制室内，那里有多个数字显示屏，并显示委内瑞拉每一个州的投票结果。当日下午两点，当对手拉登斯基领先马杜罗200万票时，马杜罗担忧自己将会输掉这场选举，他就下令让几乎所有地区断网，并且更改结果。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -112,7 +89,7 @@
   </div>
  </center>
  <p>
-  蚂蚁集团已拥有中国主要支付应用支付宝，但在IPO之前，仍加紧推出更多科技产品。
+  证人说，投票系统的操作人员把拉登斯基的票，修改给马杜罗，总共大约花了2个小时。当重新联网重新开始运行于线报告之时，他们还逐州检查屏幕显示，以确保看到每个投票结果皆被更改了，变成支持马杜罗。当时Smartmatic系统就把拉登斯基的选票更改成马杜罗。最后他们帮马杜罗赢得了20万票。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -127,7 +104,7 @@
   </div>
  </center>
  <p>
-  9月25日，蚂蚁科技集团推出用于跨国贸易结算的区块链平台。买卖双方可将交易订单上载到平台，该平台会自动生成包含物流等信息的智能合约。蚂蚁集团表示，合约生成后买卖双方的银行都可以使用蚂蚁链处理付款业务。
+  证人表示，我亲眼看到在委内瑞拉的加拉加斯秘密点票中心，能够针对选票进行控制与更改。所以，他了解了第一手的情况，更清楚知道选民决定什么或纸票选票显示什么，但都没有用。因为是由软件运营商及软件来决定什么才是真正的关键，而并非选民。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -142,11 +119,7 @@
   </div>
  </center>
  <p>
-  例如，平台用户可包括通过
-  <span href="https://www.secretchina.com/news/gb/tag/阿里巴巴集团" target="_blank">
-   阿里巴巴集团
-  </span>
-  海外电商网站“速卖通”等媒介向其它企业销售的供应商。
+  这个证人指称，这套投票软件作弊系统，最早是在委内瑞拉前总统、社会主义者查韦斯的要求之下研发的。2009年，查韦斯指示证人进行安排，与当时的国家选举委员会主席及Smartmatic公司的三名高管多次会面。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -161,7 +134,7 @@
   </div>
  </center>
  <p>
-  蚂蚁集团与阿里巴巴集团联系密切，后者不仅是蚂蚁集团第一大客户，也是其重要供应商。
+  “查韦斯要求Smartmatic公司必须开发一套投票系统，此系统能够更改每一个选民的选票，而且不会被发现”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -176,7 +149,7 @@
   </div>
  </center>
  <p>
-  蚂蚁集团在其数百页的招股说明书里反复强调，其“不是利用自身资产负债表开展业务或者提供担保”、由金融机构“独立进行信贷决策并承担风险”、基于促成的信贷规模“收取技术服务费”，暗示与这些资金和中国官方金融监管指标无关。
+  证人说，Smartmatic软件是包括了美国投票机Dominion在内的所有投票系统的DNA。Dominion使用了与Smartmatic“相同的方法及基本相同的软件设计，以存储、传输与计算投票者的ID数据及投票数据”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -191,52 +164,7 @@
   </div>
  </center>
  <p>
-  不过，中国央行可不这样想。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  中国央行原行长周小川此前撰文描述了金融科技公司如何与监管博弈及浑水摸鱼，并以支付宝举例道：第一张第三方支付牌照给了支付宝，后来支付宝又挂了余额宝，于是就开始有争议了，余额宝里的钱究竟算支付备付金还是算存款呢？这涉及是不是银监会监管的问题。如果说算存款，就需要承担存款准备金和存款保险等要求。余额宝后来又挂上了天弘基金，而天弘基金就归证监会管了。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  中国央行日前发布了金融控股公司监督管理试行办法，中国央行表示，要依照金融机构管理，以并表为基础，对资本、行为及风险进行全面、持续、穿透监管，规范经营行为，防范风险交叉传染，促进经济金融良性循环。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  9月24日，中国央行副行长范一飞在中国支付清算论坛表示，将加强宏观审慎管理，将符合条件的互联网企业纳入金融控股公司范围监管，加强功能监管。
+  证人称，Dominion还与Smartmatic共同开展业务。其软件、硬件和系统具有相同的基本缺陷，但这些缺陷允许多次破坏数据，且掩盖过程，而让普通人无法检测到任何的欺诈或操纵痕迹。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -255,7 +183,22 @@
   </ins>
  </center>
  <p>
-  从中国央行和官员的表态来看，均剑指蚂蚁集团。
+  证人解释，投票机会显示投票人想要的投票结果，然后打印出纸质选票，这些都没有问题。但问题是，它是软件在计算数字投票且报告结果。软件本身就是用来把电子信息改变成为软件与计票系统操作者自己想要产生的计票结果，它就是这样运作的。该软件本身能够配置投票及设置投票的结果，亦即它会更改投票者的选择。所以该软件的决定结果，其而与投票者的投票无关。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  更值得一提的是，原Smartmatic的董事会主席，也就是退休海军上将尼芬格（Peter Neffenger），他现在是拜登过渡时期机构审查小组的成员，主要协助与国土安全部的过渡工作。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -271,7 +214,7 @@
  </center>
  <p>
   <strong>
-   川普下一个制裁目标是阿里巴巴集团？
+   公开窃取结果
   </strong>
  </p>
  <center>
@@ -287,11 +230,7 @@
   </div>
  </center>
  <p>
-  川普此前对中港官员及
-  <span href="https://www.secretchina.com/news/gb/tag/华为" target="_blank">
-   华为
-  </span>
-  等中国公司制裁引发热议，不过有一些分析认为，应该制裁阿里巴巴集团，因为其业务涉及了银行、保险、基金等金融领域，还涉足了人工智能、企业服务等诸多非金融领域。
+  川普团队证人之一、Dominion投票系统公司于底特律的员工梅利莎．卡隆（Melissa Carone）也向媒体透露，她亲眼看到了计票站的员工是如何让拜登的选票统计暴增的。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -306,37 +245,7 @@
   </div>
  </center>
  <p>
-  美国有线电视新闻网（CNN）8月13日报道认为，虽然阿里巴巴还没有受到美国总统川普点名制裁。不过，阿里巴巴已经受到美国政府的关注，国务卿蓬佩奥已经呼吁美国公司禁止使用阿里巴巴、腾讯和百度等中国互联网公司的访问，以保护美国数据不被泄露。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  分析师认为，华府的科技禁令是阻止所有美国个人和美国公司与中国的App合作，这将切断中国公司获得美国技术的渠道。例如，阿里巴巴的云计算需要美国的半导体和软件。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  报道引述新加坡国立大学高级研究员及讲师Alex Capri表示，华府正在对中国科技公司发起更多指控，表明川普政府确实在寻求科技产业方面与中国脱钩。Capri表示，阿里巴巴集团在中国属于“国家级科技领军企业”，这一事实或许足以成为华盛顿下一波制裁的目标。
+  根据“Trending Politics”新闻网报导指出，梅利莎．卡隆负责查看计票机的工作。她表示，自己亲眼看到这些人让一些叠（每叠50张）的选票重复通过了计票器计数，甚至可重复八九至十次。且在她24小时轮班过程之中，仅看到了给拜登的选票，而并没有一张选票是给川普的。她还看到了投票站工作人员复制选票，且更改其他人的选票，可说是公开窃取结果。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -368,7 +277,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -400,13 +309,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/947306.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/947306.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/947306.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/26/947306.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/952865.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/952865.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/952865.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/18/952865.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/947306.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p9/952865.md' width='0px' height='0px'/>
