--- a/pages/nf4514/n12555633.md
+++ b/pages/nf4514/n12555633.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新11.17】抗议者警告共产主义威胁" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1284449345-600x400.jpg"/>
+<div><img alt="【大选更新11.17】川普团队律师受死亡威胁" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/President_Donald_Trump_and_Lin_Wood-600x400.jpg"/>
 <div class="caption">
- 2020年11月7日，在数百名唐纳德·川普（特朗普）支持者聚集在宾夕法尼亚州首府哈里斯堡（Harrisburg），以表达对选举结果的愤怒。（Spencer Platt/Getty Images）
+ 美国顶级大律师林肯·伍德（Lucian Lincoln Wood）表示，拜登团队企图劫持民意、窃取国家政权，他们将面临牢狱之灾。图为2020年3月11日，川普总统（右）与林肯·伍德（左）。（公共领域）
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
@@ -55,6 +55,39 @@
  </ok>
  情况的实时更新：
 </h4>
+<h3>
+ 伊万卡祝贺麦卡锡连任众议院共和党领袖
+</h3>
+<p>
+ 川普总统女儿兼高级顾问伊万卡祝贺麦卡锡连任众议院共和党领袖，她在社交媒体发文说：
+</p>
+<p>
+ “祝贺我出色的朋友和美国人民不懈的捍卫者共和党领袖凯文·麦卡锡，再次全票当选众议院共和党领导人！”
+</p>
+<p>
+ <center>
+ </center>
+</p>
+<blockquote class="twitter-tweet">
+ <p dir="ltr" lang="en">
+  Congratulations to my wonderful friend and tireless champion for the American people,
+  <ok href="https://twitter.com/GOPLeader?ref_src=twsrc%5Etfw">
+   @GOPLeader
+  </ok>
+  Kevin McCarthy, on your unanimous re-election as leader for the House GOP!
+  <ok href="https://t.co/BzD81wk7Vx">
+   pic.twitter.com/BzD81wk7Vx
+  </ok>
+ </p>
+ <p>
+  — Ivanka Trump (@IvankaTrump)
+  <ok href="https://twitter.com/IvankaTrump/status/1328791970223960064?ref_src=twsrc%5Etfw">
+   November 17, 2020
+  </ok>
+ </p>
+</blockquote>
+<p>
+</p>
 <h3>
  快讯：乔治亚州又一个县发现数千张选票未计数 大多投了川普
 </h3>
