--- a/pages/nsc412/n12555633.md
+++ b/pages/nsc412/n12555633.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新11.17】抗议者警告共产主义威胁" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1284449345-600x400.jpg"/>
+<div><img alt="【大选更新11.17】川普团队律师受死亡威胁" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/President_Donald_Trump_and_Lin_Wood-600x400.jpg"/>
 <div class="caption">
- 2020年11月7日，在数百名唐纳德·川普（特朗普）支持者聚集在宾夕法尼亚州首府哈里斯堡（Harrisburg），以表达对选举结果的愤怒。（Spencer Platt/Getty Images）
+ 美国顶级大律师林肯·伍德（Lucian Lincoln Wood）表示，拜登团队企图劫持民意、窃取国家政权，他们将面临牢狱之灾。图为2020年3月11日，川普总统（右）与林肯·伍德（左）。（公共领域）
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
