同步于: 11月18日21时52分

--- a/pages/nf4514/n12558221.md
+++ b/pages/nf4514/n12558221.md
@@ -5,7 +5,7 @@
 
 
 
-<div><img alt="【大选更新11.18】川普辞退网络安全局长" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/11-43.jpg"/>
+<div><img alt="【大选更新11.18】 参院将改230条款" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/12-8.jpg"/>
 <div class="caption">
  周二（11月17日）晚，美国总统川普（特朗普）在推特上宣布，他已经解除了国土安全部网络安全与基础设施安全局局长克里斯‧克雷布斯（Chris Krebs，图）的职务。(Kevin Hagen/Getty Images)
 </div></div><hr/>
