--- a/pages/p3/952989.md
+++ b/pages/p3/952989.md
@@ -1,4 +1,4 @@
-### 一中国公民因向美输送芬太尼 受到美国制裁(图)
+### 华人豪车主为争车位大打出手 车毁店毁人伤(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="芬太尼 美国 中国公民" src="https://img2.secretchina.com/pic/2018/12-7/p2318001a529257183-ss.jpg" style="height:333px; width:500px"/>
+ <p style="text-align:center">
+  <img alt="华人 争停车位 宝马" src="https://img3.secretchina.com/pic/2020/5-26/p2697291a470478680-ss.jpg" style="height:444px; width:600px"/>
   <br>
-   芬太尼类药品（图片来源：维基百科）
+   11月16日在纽约法拉盛中美超市前，两名分别开宝马和奥迪的华人车主，因为争抢停车位大打出手。结果造成车毁店毁人伤。（图为撞烂的宝马车/示意图/非本文图片/图片来源：MARK RALSTON/AFP via Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,70 +21,60 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/)  &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html) &nbsp;|&nbsp; [网门免翻墙](http://158.247.203.241:11000/show.aspx?name=ogHome)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  《大裤衩》第一集 - 揭秘央视电视台《焦点追踪》节目组的幕后故事](http://141.164.51.119:10000/videos/news/../res/big-shorts/index.html)
-
-#### [ 🔥  忧心中国会回到文革时期！前中国黑龙江省鸡西市副市长李传良，真名退出共产党](http://141.164.51.119:10000/videos/news/quit01.html)
-
-#### [ 🔥  走出文化亡国第十集 伪专家和造新闻 － 中共宣传机器愚弄民众的两个“致命暗器”](http://141.164.51.119:10000/videos/news/../res/zcwhwg/index.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年8月27日讯】最近，一名
+  【看中国2020年11月19日讯】11月16日在
   <strong>
-   中国公民
-  </strong>
-  因为走私毒品
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/芬太尼" target="_blank">
-    芬太尼
+   <span href="https://www.secretchina.com/news/gb/tag/纽约" target="_blank">
+    纽约
    </span>
   </strong>
-  ，被美国制裁。8月25日，美国财政部外国资产控制办公室（OFAC），根据《外国毒枭认定法》，认定中国公民
+  法拉盛中美超市前，两名分别开
   <strong>
-   张涛涛
+   宝马
   </strong>
-  （音译,Taotao Zhang）为“重大外国麻醉品贩运者”，总部位于香港的联升科技集团有限公司（Allyrise Technology Group Co）因是张涛涛所拥有、控制或由他指导或代表他，也被美国财政部列为制裁对象。
+  和
+  <strong>
+   奥迪
+  </strong>
+  的华人车主，因为争抢
+  <strong>
+   停车位
+  </strong>
+  发生争执，继而大打出手。其后奥迪车主返回车内，违规掉头想撞打他的人，结果不小心冲上人行道，撞毁一家刚开张仅1天的饼屋，5人在事故中受伤。目前4名打架者被拘捕。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  报道称，美国财政部副部长穆齐尼奇(Justin G.Muzinich)在一份声明中说，“
-  <span href="https://zh.wikipedia.org/wiki/%E8%8A%AC%E5%A4%AA%E5%B0%BC" target="_blank">
-   芬太尼
+  据海外多家中文媒体报导，11月16日下午4点多，在纽约
+  <span href="https://zh.wikipedia.org/zh-hans/%E6%B3%95%E6%8B%89%E7%9B%9B" target="_blank">
+   法拉盛
   </span>
-  给美国社区和家庭造成了严重破坏”、“美国仍然致力于通过打击兜售这种致命毒品的个人来保护脆弱的美国人。”
+  凯辛娜大道中美超市前，两辆豪车的华人车主疑为争抢停车位而发生争执。
  </p>
  <p>
-  财政部的声明说，身为化学专家和化学品供应商的张涛涛，通过多个个人和货运服务，将合成阿片类药物运到
-  <span href="https://www.secretchina.com/news/gb/tag/美国" target="_blank">
-   美国
+  据周边商家提供的摄像头录像，下午4点多，在
+  <span href="https://www.secretchina.com/news/gb/tag/法拉盛" target="_blank">
+   法拉盛
   </span>
-  ，以掩盖这些药物的来源。他们使用隐瞒包裹内所含物质的标签，以避免被当局查封。一旦在美国收到一个包装，位于美国的分销商通常可以将1公斤的芬太尼压入多达100万的假冒药片中，然后进一步分发给国内客户。
+  中美超市前，一辆宝马和一辆奥迪互相抢停车位，两车上的人发生争执，车上各下来2名年轻华人，4人大打出手，其中一男子甚至拿出棒球棍攻击对方。拿棒球棍的据称是宝马男。
  </p>
  <p>
-  财政部还指出，
-  <span href="https://www.secretchina.com/news/gb/tag/张涛涛" target="_blank">
-   张涛涛
-  </span>
-  是香港联升科技集团有限公司的负责人，该公司是张涛涛进行金融交易的幌子公司。
+  被棒球棍攻击的奥迪男返回自己的车，但一宝马男仍穷追不舍，继续拿着棒球棍击打奥迪车，奥迪车上的男子开车后，违规U-TURN(掉头）折回，可能想开车撞打他的人，但车子却不偏不倚一头冲进了紧挨着中美超市的一家“云宝饼屋”，饼屋的玻璃门被撞的粉碎，店内的货架等均被撞的稀巴烂，一片狼藉。据悉，这家云宝饼屋新开张仅1天，没想到突遭飞来横祸。
  </p>
  <p>
-  被认定“重大外国麻醉品贩运者”后，在美国境内或在美国人拥有或控制下的该个人和实体的一切财产和利益都必须被冻结，并报告给外国资产控制办公室。
+  由于奥迪车速非常快，当时刚好有几名路人经过，有人快步避开，但有一人因为躲闪不及，被奥迪撞倒在地，在地上痛苦打滚。
  </p>
  <p>
-  美国国务卿蓬佩奥，星期二在财政部做出这一宣布后发表声明说，这是美国瓦解和震慑贩毒组织的广泛努力的一部分，这些贩毒组织“从中国购买非法的易制毒化学品，利用这些易制毒物品生产芬太尼，并将成品走私进美国”。
+  民众报警后，多辆警车、消防车、救护车到达现场，109分局新任局长欧康纳（John O’Connell）在现场指挥，现场大批华人围观。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -99,7 +89,7 @@
   </div>
  </center>
  <p>
-  报道还称，自2000年6月以来，根据《外国毒枭认定法》，已有2200多个人和实体，因其在国际毒品贩运中所扮演的角色而被认定。违反该法的处罚从每次最高152万9991美元的民事处罚到更严厉的刑事处罚。对公司管理人员的刑事处罚可能包括最高30年监禁和最高500万美元的罚款。对企业的刑事罚款可能高达1000万美元。根据相关法律的规定，其他个人可能面临长达10年的监禁和罚款。
+  现场可见，车牌为X45JBL的奥迪车头损毁严重，气囊弹出。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -114,7 +104,7 @@
   </div>
  </center>
  <p>
-  2019年8月21日，美国财政部召开新闻发布会,宣布对走私毒品芬太尼到美国的三名中国人实施制裁。这3名中国人分别是郑广华（音译）和他的儿子郑福京（音译），两人是父子关系。
+  警方表示，事件中共有5人受伤，伤者随即被送往皇后区纽约长老医院（NewYork-Presbyterian Queens Hospital）进行治疗。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -129,7 +119,7 @@
   </div>
  </center>
  <p>
-  报道称，郑姓父子因生产和走私芬太尼及其相关物质，2018年在俄亥俄州遭到起诉。据俄亥俄检察机关调查，父子两人将制造的致命性芬太尼偷运进了美国的至少37个州。他们建立了大量网站，通过网络销售非法毒品。为了逃避执法机构的监管，他们通过美国邮政寄送装有毒品的邮包。
+  现场目击者许先生说，当时两名奥迪男知道闯大祸，从车中走出后便弃车离去，但警车很快就来到，把他们找到，“一人走出车辆时，惊恐万分，吓死了，脸像死人那样”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -144,7 +134,7 @@
   </div>
  </center>
  <p>
-  另一名被制裁的是闫晓兵（音译），2017年在密西西比州被起诉。他被控在美国境内的多个城市非法制造和贩卖包括芬太尼和合成鸦片在内的多种违禁物。
+  后来，纽约市楼宇局的人员也来到现场，勘查该商铺建筑是否有危险。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -163,7 +153,7 @@
   </ins>
  </center>
  <p>
-  被财政部制裁的郑氏父子和闫晓兵都使用了比特币等数字货币洗白贩毒所得利润，逃避货币限制和金融监管。
+  目击者张广利说，开豪车的年轻华人，可能有炫富心理，为了争车位互相不退让甚至大打出手，还闯出这么大祸，伤及无辜，本来互相忍让一下就小事化无的，真是令人摇头
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -178,7 +168,7 @@
   </div>
  </center>
  <p>
-  根据美国缉毒署（DEA）官网的信息，中国目前仍是芬太尼及与芬太尼相关物质经由国际邮递和快递拖延途径而走私进入美国的首要源头。
+  涉案4人均以攻击罪（assault）被捕。涉事者名字以及详细罪名有待进一步公布。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -193,11 +183,11 @@
   </div>
  </center>
  <p>
-  美国官方报告显示，每年数以万计的美国人死于芬太尼有关的药物过量，
-  <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
-   川普
+  2019年1月，加拿大温哥华的第一商场（First Avenue Marketplace）停车场内，两名华人男子也因为争停车位而大打出手，事件不但引来众多华人网民热议，加拿大多家媒体也对此时做了报导，温哥华警方也介入此案进行调查。（详情请看：
+  <span href="https://www.secretchina.com/news/b5/2019/01/31/883353.html" target="_blank">
+   为这小事 温哥华粤语男与国语男大打出手
   </span>
-  (特朗普)总统在2017年10月宣布阿片类危机为公共卫生突发事件。
+  ）
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -229,7 +219,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -261,13 +251,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/944249.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/944249.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/944249.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/08/27/944249.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/952989.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/952989.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/952989.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/19/952989.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p3/944249.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p3/952989.md' width='0px' height='0px'/>
