--- a/pages/p3/953018.md
+++ b/pages/p3/953018.md
@@ -1,4 +1,4 @@
-### 来自中国的“神秘种子”： 验出有罂粟种子(图)
+### 加孕妇严守防疫措施仍染疫 昏迷不醒(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align: center;">
-  <img alt="罂粟种子 中国神秘种子 " src="https://img3.secretchina.com/pic/2020/8-27/p2763191a213647334-ss.jpg" style="height:399px; width:600px"/>
+  <img alt="加拿大 疫情 孕妇 染疫" src="https://img3.secretchina.com/pic/2020/7-17/p2734642a653286616-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   来自中国的“神秘种子”中，验出有罂粟种子。（罂粟示意图/图片来源：Pixabay)
+   加拿大一孕妇虽然严守防疫措施但仍染疫，紧急剖腹产后昏迷不醒。（示意图/非本文图片/图片来源：Adobe Stock)
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,83 +21,63 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/)  &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html) &nbsp;|&nbsp; [网门免翻墙](http://158.247.203.241:11000/show.aspx?name=ogHome)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  《大裤衩》第一集 - 揭秘央视电视台《焦点追踪》节目组的幕后故事](http://141.164.51.119:10000/videos/news/../res/big-shorts/index.html)
-
-#### [ 🔥  忧心中国会回到文革时期！前中国黑龙江省鸡西市副市长李传良，真名退出共产党](http://141.164.51.119:10000/videos/news/quit01.html)
-
-#### [ 🔥  走出文化亡国第十集 伪专家和造新闻 － 中共宣传机器愚弄民众的两个“致命暗器”](http://141.164.51.119:10000/videos/news/../res/zcwhwg/index.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年8月27日讯】上月，
+  【看中国2020年11月19日讯】
   <strong>
-   美国
+   加拿大
   </strong>
-  、英国、日本、加拿大、法国、澳大利亚，甚至以色列等多个国家和地区的民众，都收到来自
+  一名37岁
   <strong>
-   中国
+   准妈妈
   </strong>
-  的
+  在怀孕期间一直严格遵守公共卫生部门的指导，每次出门都认真做好防护措施，没想到在生产前离奇感染了
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/神秘种子" target="_blank">
-    神秘种子
+   <span href="https://www.secretchina.com/news/gb/tag/中共病毒" target="_blank">
+    中共病毒
    </span>
+   (又称新冠状病毒，COVID-19)
   </strong>
-  后，各国政府农业部都告诫当地民众，不要种植这些来路不明的神秘种子。每日邮报记者Helen Minsky也在4月接连收到了两个包裹，她种出的果实经鉴定，是一盆旱金莲。第二份种子没有种，鉴定结果是
+  ，需紧急
   <strong>
-   罂粟
+   剖腹产子
   </strong>
-  。
+  。刚出生的儿子目前很健康，暂时没有测出COVID-19，但是产妇吉尔却因为并发症在病房里昏迷不醒。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  综合外媒报道，尽管当局都呼吁民众收到这些神秘种子，千万不要种植。不过，有的人在当局发出警告前就已经下种，并长出苗来。有的甚至已经开花结果。
- </p>
- <p>
-  美国一名大爷Doyle Crenshawn，把神秘种子种下，最后种出了一个像是瓜的玩意，但具体品种尚不清楚。这名大爷在接受采访时表示，”这瓜长得老快了！“
- </p>
- <p>
-  住在肯塔基州的Tiffany Lowery种下种子则是个意外，她6月就收到了来自
-  <span href="https://www.secretchina.com/news/gb/tag/中国" target="_blank">
-   中国
+  据加拿大媒体报导，来自
+  <span href="https://zh.wikipedia.org/wiki/2019%E5%86%A0%E7%8A%B6%E7%97%85%E6%AF%92%E7%97%85%E5%8A%A0%E6%8B%BF%E5%A4%A7%E7%96%AB%E6%83%85" target="_blank">
+   加拿大
   </span>
-  的包裹，以为是自己参加的种植俱乐部送来的。等她种下，种子都发芽了，Tiffany才看到了相关新闻，最终在当地农业部的指导下处理了花盆。
+  BC省的戴夫（Dave McIntosh）和妻子吉尔（Gill McIntosh）在相识8年后，于2017年结婚，并在2018年迎来一个女儿。
  </p>
  <p>
-  住在英国肯特郡查塔姆的Amy Spearman，种下了几株番茄。Amy收到种子的时间很早，在今年4月，当时正值疫情隔离期，她又在放产假，无所事事便网购了许多种子。也是在种下不久后，她才从新闻里得知"神秘种子"一事。现在番茄快收成了，她也不敢吃了。
+  2020年，吉尔第二次怀孕。她一直严守防疫措施，每次出门都做了充足的措施。但是，吉尔在11月初开始感到身体不适，她以为这是妊娠晚期的压力导致的，但后来情况变得越来越严重，直到吉尔日日感到恶心，甚至无法进食。于是，在嘱咐丈夫照看女儿之后，吉尔就独自一人到医院进行检查。
  </p>
  <p>
-  每日邮报的记者Helen Minsky，曾经在亚马逊上订购甜豌豆苗，她在4月后接连收到了两个种子包裹，她种出的果实经鉴定，是一盆旱金莲。第二份种子没有种，鉴定结果是罂粟。
+  令全家人感到难以置信的是，吉尔在11月6日被确诊了
+  <span href="https://www.secretchina.com/news/gb/tag/染疫" target="_blank">
+   染疫
+  </span>
+  。随后，戴夫和女儿被立即隔离并接受病毒检测，所幸结果都是阴性。
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
  <p>
-  另据澳洲媒体报道，过去5周，澳洲各地都有居民在邮箱中收到来自中国的
-  <span href="https://www.secretchina.com/news/gb/tag/不明种子" target="_blank">
-   不明种子
+  吉尔和家人根本不知道她是如何感染上中共病毒的，俩人一直严格遵守公共卫生部门的指导，每次出门都认真做好防护措施。
+ </p>
+ <p>
+  戴夫称，自己最后一次与妻子联系是通过短信，妻子告知他由于并发症，她必须立即被送往急诊做
+  <span href="https://www.secretchina.com/news/gb/tag/剖腹产" target="_blank">
+   剖腹产
   </span>
   。
  </p>
@@ -114,7 +94,7 @@
   </div>
  </center>
  <p>
-  澳洲种子协会（ASF）呼吁澳人，如果收到此类种子的人要立即向农业、水资源和环境部报告。
+  刚出生的儿子目前很健康，暂时没有测出COVID-19，但产后的吉尔却因为并发症在病房里昏迷不醒。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -129,7 +109,7 @@
   </div>
  </center>
  <p>
-  种子协会会长Osman Mewett表示，这些来路不明的种子在全世界引起了注意，这些种子从何而来，邮寄到世界各地的动机是什么都尚不清楚。
+  报导称，戴夫紧紧抱着刚出生的儿子，整个人都懵了，完全不知该如何面对这种状况。“对我来说，这是个陌生的世界。”戴夫说：“我和吉尔结婚的时候，就知道她就是我要找的人，我们会有一个幸福美满的小家，但是所有的计划都被中共病毒打乱了。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -144,7 +124,7 @@
   </div>
  </center>
  <p>
-  Mewett表示，他没有看到任何可信的解释，“收到这些包裹的人似乎也没有规律可循。”
+  “她是我的一切。”他说，“她是我的妻子，是我的生命。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -159,7 +139,56 @@
   </div>
  </center>
  <p>
-  他担心这些来路不明的种子如果被种植出来，可能会威胁到澳洲的生物安全。因此应交给农业部销毁。“保持种子和植物的健康对于粮食供应和澳洲的环境至关重要”，Mewett说。
+  产子几天之后，吉尔的状态逐渐恢复稳定，但仍然处于昏迷，需要连着呼吸机。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <center>
+  <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="fluid" data-ad-layout="in-article" data-ad-slot="3646767294" style="display:block; text-align:center;">
+  </ins>
+ </center>
+ <p>
+  戴夫表示非常震惊和难过：“根据我以前的理解，这种情况等于在勉强维持生命。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  戴夫想告诫那些不重视疫情的人，“大流行已经持续了很长时间，大家都很疲惫，但是，现在所做的这些显然还不够，每个人都需要立即停止一切不必要的行动，是时候开始认真对待这个问题了。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  令人感到欣慰的是，在最无助的时候，戴夫和吉尔的家人和朋友一直在他们身边提供支持，其中一位朋友发起了一项在线筹款活动，并在短短2天就筹到超过目标金额5万加元。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -191,7 +220,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -223,13 +252,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/944255.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/944255.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/944255.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/08/27/944255.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/953018.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/953018.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/953018.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/19/953018.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p3/944255.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p3/953018.md' width='0px' height='0px'/>
