--- a/pages/soh6/444271.md
+++ b/pages/soh6/444271.md
@@ -43,6 +43,15 @@
   </ok>
   报导：
  </p>
+ <h3 class="title">
+  内华达州选举违规再现：1.5万选民同时在州内外投票
+ </h3>
+ <p class="title">
+  近日，内华达州再次被爆出现选举违规的案例。有证据表明，在该州有1.5万人除了在内华达州投票外，在另外一个州也同时投了票。内华达州共和党人已在卡森市地方法院提交了诉讼书，对该州总统选举结果提出抗议。
+ </p>
+ <p>
+  该诉讼书说：“这种欺诈行为及其规模使内华达的选举结果并不合法。”该州共和党人表示，当地发生了“实质性的违规、不当和欺诈行为”，并称该州选举官员实施了“极易被欺诈和利用”的选举系统，希望通过诉讼来“杜绝欺诈并确保选举的公正性”。
+ </p>
  <h3>
   川普团队状告乔州州务卿违宪、破坏计票验证程序
  </h3>
@@ -53,11 +62,7 @@
   川普团队资深律师伍德表示，该诉讼是基于被告的违宪行为，州务卿和选举委员会无权改变缺席投票的计票方式。川普总统也谴责说：“乔州的所谓重新计票就是一个笑话。”
  </p>
  <p>
-  相关诉讼中指出，由于其选举活动的实质流程违宪，被告应禁止对2020年
-  <ok href="https://www.soundofhope.org/term/23267">
-   乔治亚州
-  </ok>
-  选举结果进行认证。
+  相关诉讼中指出，由于其选举活动的实质流程违宪，被告应禁止对2020年乔治亚州选举结果进行认证。
  </p>
  <h3 class="title">
   拨款300万 川普阵营要求威州违规严重的两县重新点票
