同步于: 11月19日7时3分

--- a/pages/soh6/444271.md
+++ b/pages/soh6/444271.md
@@ -43,6 +43,29 @@
   </ok>
   报导：
  </p>
+ <h3>
+  密歇根州选票数比投票数多 川普发推谴责
+ </h3>
+ <p>
+  战场州密西根州被检举出现重大选举欺诈，该州发放选票的数量尽然超过了投票数量。对此，川普总统连续发多条推文谴责该州。川普说：“在伟大的密歇根州，选票的数量远远超过了投票人数。（该州）不能认证选举结果。民主党人撒了弥天大谎，并且被抓逮到了。共和党赢了！”总统还提到，底特律的选票数量也远远超过了投票人的数量，他说，“无法解决如此巨大的骗局，我赢了密歇根州！”
+ </p>
+ <div class="soh-embed">
+  <div class="soh-embed-inner">
+   <div class="iframely-embed" style="max-width: 550px;">
+    <div class="iframely-responsive">
+    </div>
+   </div>
+  </div>
+ </div>
+ <h3>
+  川普团队律师：无可辩驳的証据指乔治亚州官员涉重大选举欺诈
+ </h3>
+ <p>
+  针对乔治亚州的选举计票，川普团队律师伍德（Lin Wood）表示：“我们有无可辩驳的证据，证明乔州地方选举官员接到州政府的指示，要报告原来计票的总数，而不是报告重新计票后的总数。”他表示，这些官员已经腐败到故意触犯法律，故意在联邦选举中犯下欺诈罪行。
+ </p>
+ <p>
+  乔治亚州州务卿拉芬斯珀格（Brad Raffensperger）上周宣布对该州159个县的选票进行手工重新计票。川普团队本周回应说，乔州的重新计票不允许查核签名，完全是一场骗局。川普总统也发推批评乔州州长坎普（Brian Kemp）说：“乔州不允许我们查看所有重要签名是否匹配。没有这个（查核签名），重新计票就事‘毫无意义的’。”
+ </p>
  <h3 class="title">
   内华达州选举违规再现：1.5万选民同时在州内外投票
  </h3>
