--- a/pages/p2/953101.md
+++ b/pages/p2/953101.md
@@ -1,4 +1,4 @@
-### 400亿疫苗股现“杀猪盘” 瞬间闪崩7万股民入坑(图)
+### 寺院长老想进京当官 请吃饭问“喝什么酒？”(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align: center;">
-  <img alt="股民 杀猪盘 疫苗 辽宁成大" src="https://img3.secretchina.com/pic/2020/3-8/p2643362a464333362-ss.jpg"/>
+  <img alt="参加中共会议的和尚" src="https://img2.secretchina.com/pic/2019/4-29/p2414182a200414361-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   9月25日，辽宁成大闪崩跌停，让7万投资者懵了，很多股民称中了“杀猪盘”陷阱。（图片来源：Adobe Stock）
+   参加中共会议的和尚（图片来源: GREG BAKER/AFP/Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,60 +21,62 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月27日讯】（看中国记者丁晓雨综合报导）9月25日，
+  【看中国2020年11月19日讯】（看中国记者晏清流综合报导）在宣扬“无神论”的中共统治之下，中国
   <strong>
-   辽宁成大
-  </strong>
-  闪崩跌停，7万
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/股民" target="_blank">
-    股民
+   <span href="https://www.secretchina.com/news/gb/tag/宗教" target="_blank">
+    宗教
    </span>
   </strong>
-  入坑，更有多人表示中了“
+  界早已是官场的一部分。海外评论人士张杰日前在推特上讲述在中国时的一段往事，他说
   <strong>
-   杀猪盘
+   武汉
   </strong>
-  ”陷阱，满仓被套。同时杀猪跌停的还有重庆的冠城大通，“杀猪”后直奔跌停。这也是A股6月以来曝光的至少第8起“杀猪盘”。
+  某寺院长老想进京
+  <strong>
+   升官
+  </strong>
+  ，请他吃饭，点菜时还不忘问他“喝什么酒？”
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  9月25日上午，
-  <span href="https://www.secretchina.com/news/gb/tag/辽宁成大" target="_blank">
-   辽宁成大
+  张杰18日在推文中说，他在
+  <span href="https://zh.wikipedia.org/wiki/%E6%AD%A6%E6%B1%89%E5%B8%82" target="_blank">
+   武汉
   </span>
-  早盘开盘后一直在横盘震荡，微幅涨跌，临近上午10：30，突然一头栽下，仅仅8分钟便封死跌停。从成交明细来看，在这短短8分钟之内有10多笔高达1000手的卖单喷涌而出。
+  做律师时，有一个寺院的长老想与他所在的律师事务所合作，用长老的书法做成挂历，事务所负责印刷。
  </p>
  <p>
-  截至25日收盘时，报25.58元，最新市值为391.3亿元，成交10.86亿元，换手率2.7%。不过，收盘时仍有4.28万手封单在跌停板上。
+  于是在张杰前往寺庙拜访这个长老，到中午时，长老开着奔驰车带张杰去吃饭。他们去的是一个素菜馆，点菜时，这个长老还不忘问他“喝什么酒？”
  </p>
  <p>
-  据《每日经济新闻》报导，尽管25日跌停封死，
-  <span href="https://zh.wikipedia.org/wiki/遼寧成大" target="_blank">
-   辽宁成大
+  席间，长老提到，最近宗教局要调整寺庙长老，他作为第三梯队，有望进京，所以希望书法出版要快一点。
+ </p>
+ <blockquote class="twitter-tweet">
+  <p dir="ltr" lang="zh">
+   在
+   <span href="https://www.secretchina.com/news/gb/tag/武汉" target="_blank">
+    武汉
+   </span>
+   做律师时，一大寺院的长老想与我所合作，用他的书法做成挂历。他出书法，我所印刷，既弘扬佛法又作为我所和寺庙的节日礼物。我去寺庙拜访他。到中午，他开着奔驰车带我吃素菜。席间，他说最近宗教局要调整寺庙长老，他作为第三梯队，有望进京，所以书法出版要快点。点菜时，他问我：喝什么酒？
+  </p>
+  — 张杰（武汉） (@ZJ20672066)
+  <span href="https://twitter.com/ZJ20672066/status/1329039290832130048?ref_src=twsrc%5Etfw">
+   November 18, 2020
   </span>
-  今年以来涨幅仍有69%。而从2018年10月份底部至今，股价涨幅更是达到200%。
- </p>
+ </blockquote>
  <p>
-  突如其来的闪崩，让7万投资者懵了。还有很多
-  <span href="https://zh.wikipedia.org/wiki/投資者" target="_blank">
-   股民
-  </span>
-  称自己中了“杀猪盘”陷阱，满仓被套。
- </p>
- <p>
-  据《金融界》报导，有大v拉群荐股、直播鼓动抬轿，配合“庄家”出货。盘后数据显示，辽宁成大全天成交金额接近11亿元。
+  网友在推文下留言嘲讽：“听着就是体制内的”、“这长老是党委书记吧”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -89,26 +91,11 @@
   </div>
  </center>
  <p>
-  9月25日，就在崩盘前半个小时，辽宁成大控股子公司成大生物科创板上会审议，有大V在自己的荐股群里呼吁，“辽宁成大现在28.49附近还可以买入”，并称最大看点在于成大生物过会板上钉钉，建议在上市之前逢低进场其母公司辽宁成大。然而，不到半小时，辽宁成大就崩盘跌停。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  今年以来，因疫情的原因，辽宁成大股价因为
-  <span href="https://zh.wikipedia.org/wiki/疫苗" target="_blank">
-   疫苗
+  中共建政后大力宣扬无神论，不但大肆破坏中华传统文化，还从内部渗透
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
   </span>
-  成功翻倍，8月初触及31.85元新高后进入盘整。上半年，辽宁成大实现营收81.69亿元，净利润9.51亿元，较去年同期分别增长-8.70％、26.65％。
+  传统宗教，宗教实际上已变成中共官场，各级都有党的“书记”，并且由属于直接是政府部门的宗教局领导。1952年成立的中共佛教协会与1957年成立的中共道教协会，在其发起书中都明确表示要“在人民政府领导下”，实际上就是在“无神论”的共产党领导之下。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -123,7 +110,7 @@
   </div>
  </center>
  <p>
-  9月25日，上交所官网披露，江苏富淼科技股份有限公司、辽宁成大生物股份有限公司、常州银河世纪微电子股份有限公司科创板首发过会。成大生物是A股上市公司辽宁成大的子公司，此次成大生物科创板IPO过会也是两市首单“A拆A”分拆上市过会企业。
+  在2017年中共十九大前，推特曾流传一段视频显示，有穿袈裟的和尚给中共十九大诵经“开光”。现场一群穿便服的官员模样的人忙碌着，台上的大视频画面上写“喜迎十九大”几个大字。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -138,7 +125,41 @@
   </div>
  </center>
  <p>
-  《证券日报》25日报导称，资深投行人士表示，成大生物作为A股第一单分拆上市的公司，具有里程碑意义，未来会越来越多的公司进行分拆上市。
+  中共十九大后，中共佛教协会副会长印顺大和尚公开宣称十九大报告是“佛经”，自己已手抄了3遍，还要抄10遍，并要佛教徒跟他学。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  11月6日，中国西安大慈恩寺组织和尚学习中共五中全会公报。大慈恩寺方丈增勤大和尚在会上强调，要把思想和行动统一到
+  <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
+   习近平
+  </span>
+  的“重要讲话精神”上来，做到“两个维护”，云云。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  11月11日召开全国性宗教团体联席会议第十四次会议佛教、道教、伊斯兰教、天主教、基督教五大宗教团体的负责人，声称要“把思想和行动统一到党中央决策部署上来”以及搞所谓“宗教中国化”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -157,7 +178,7 @@
   </ins>
  </center>
  <p>
-  成大生物招股说明书称，本次分拆完成后，辽宁成大股权结构不会发生变化且仍拥有对成大生物的控股权。通过本次分拆，可使辽宁成大和成大生物的主业结构更加清晰，成大生物将依托上交所科创板平台独立融资，有利于进一步提升公司整体市值，增强公司及所属子公司的盈利能力和综合竞争力。
+  其中天主教主教团主席马英林在会上声称，中国天主教将要“紧密团结在以习近平为核心的党中央周围”，以及坚持所谓“四个意识”、“两个维护”，完全和中共官员一样的说辞。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -172,7 +193,7 @@
   </div>
  </center>
  <p>
-  9月25日盘后，上交所公布成大生物等3家企业科创板首发过会的消息，辽宁成大成为“A拆A”上市第一股，而这个“具有里程碑意义”的第一股，送给7.3万股民的第一份大礼，是一把锃亮的“杀猪刀”。
+  近年中共政府利用官办宗教团体协助，进行严厉的社会管控及镇压宗教信仰，官方则默许这些团体利用宗教谋取巨额利益。2018年中共扶持的佛教第一人、国家政协常委释学诚即被举报性侵女弟子，挪用资金而被贬。而少林寺住持释永信此前亦曾深陷贪腐和私生子丑闻。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -187,11 +208,22 @@
   </div>
  </center>
  <p>
-  同样遭遇“
-  <span href="https://www.secretchina.com/news/gb/tag/杀猪盘" target="_blank">
-   杀猪盘
-  </span>
-  ”的还有重庆的冠城大通，“杀猪”后直奔跌停。这也是A股6月以来曝光的至少第8起“杀猪盘”。
+  此外还有温州同时兼任两座寺庙住持的苍南县佛教协会常务副会长、市政协委员释智通，遭准儿媳举报“娶妻吃肉”、出入五星级宾馆；天籁寺住持、湖南娄底佛教协会会长圆通被前妻举报挪用资金、重婚，等等。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  经常为中共政府政策背书的小粉红道士梁兴扬，上月被西安道教协会以道风不正为由除名后，近日扬言将晒出道教协会领导班子的腐败证据以作报复。梁兴扬称道教协会高层贪腐，包养情人，潜规则女信徒等，并称手里有照片。事件引爆舆论。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -223,7 +255,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -255,13 +287,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/947434.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/947434.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/947434.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/27/947434.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/953101.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/953101.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/953101.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/19/953101.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/947434.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p2/953101.md' width='0px' height='0px'/>
