--- a/pages/nf4514/n12560779.md
+++ b/pages/nf4514/n12560779.md
@@ -1,4 +1,4 @@
-### 【大选更新11·19】川普：民主党作弊被发现了
+### 【大选更新11·19】议员吁国会对大选听证
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -15,7 +15,7 @@
 #### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 <div><p>
- 【大纪元2020年11月19日讯】（大纪元记者陈霆综合报导）随着
+ 【大纪元2020年11月19日讯】（大纪元记者陈霆、徐简综合报导）随着
  <ok href="https://www.epochtimes.com/gb/tag/%E5%B7%9D%E6%99%AE.html">
   川普
  </ok>
@@ -55,6 +55,67 @@
 <h4>
  以下是美国大选日各州投票情况的实时更新：
 </h4>
+<h3>
+ 共和党议员吁对大选进行国会听证
+</h3>
+<p>
+ 美国众议院的资深共和党众议员吉姆·乔丹（Jim Jordan）和詹姆斯·科默（James Comer）敦促国会立即举行听证会，以“确认2020大选的公正性”。
+</p>
+<p>
+ 他们在给众议院司法委员会主席杰罗德·纳德勒（Jerrold L. Nadler）和众议院监督与重审委员会主席卡洛琳·马洛尼（Carolyn B. Maloney）信中说，“我们敦促你们立即召开听证会，审查2020年大选的公正性，目前存在着令人不安的违规和不正当行为的报告。”
+</p>
+<h3>
+ 乔州第四个县出错 9626票错计给拜登
+</h3>
+<figure class="wp-caption aligncenter" id="attachment_12555390" style="width: 600px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229646201.jpg">
+  <img alt="" class="size-large wp-image-12555390" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229646201-600x400.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  2020年11月16日，美国乔治亚州劳伦斯维尔（Lawrenceville），总统大选过后，格威内特县（Gwinnett County）选举工作人员正在休息，之后继续进行重新计票。(Megan Varner/Getty Images)
+ </figcaption><br/>
+</figure><br/>
+<p>
+ 美国乔治亚州第四个县出现计票错误。迪卡尔布县（DeKalb County）在手工重新计票过程中，监票员发现9,626张选票错计给了拜登。
+</p>
+<p>
+ 乔治亚州共和党主席大卫‧沙弗（David Shafer）11月18日发推文表示，“一位共和党监票员发现9,626张选票出现计票错误。有一批选票被计成10,707票投给拜登、13票投给川普——按迪卡尔布县的标准来看，这种差距是不可信的。实际情况是1,081票投给拜登、13票投给川普。”
+</p>
+<blockquote class="twitter-tweet">
+ <p dir="ltr" lang="en">
+  One of our monitors discovered a 9,626 vote error in the DeKalb County hand count. One batch was labeled 10,707 for Biden and 13 for Trump – an improbable margin even by DeKalb standards. The actual count for the batch was 1,081 for Biden and 13 for Trump.
+ </p>
+ <p>
+  — David Shafer (@DavidShafer)
+  <ok href="https://twitter.com/DavidShafer/status/1329062200737148932?ref_src=twsrc%5Etfw">
+   November 18, 2020
+  </ok>
+ </p>
+</blockquote>
+<p>
+ <br/>
+ 费耶特县、弗洛伊德县和沃尔顿县在本周一和周二发现一些选票未被计入票数中，未被计票的选票均是多数投给川普的。这三个县的错误被更正后，川普增加了超过1,400张选票。
+</p>
+<h3>
+ 美议员：国会有权力拒州选举人团投票结果
+</h3>
+<figure class="wp-caption aligncenter" id="attachment_12552035" style="width: 600px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2020/11/IMG_2543-1.jpg">
+  <img alt="" class="size-large wp-image-12552035" src="https://i.epochtimes.com/assets/uploads/2020/11/IMG_2543-1-600x450.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  11月14日，美国首都华盛顿DC举行百万人集会游行，人们传递出反大选舞弊与支持川普连任的心声。（施萍/大纪元）
+ </figcaption><br/>
+</figure><br/>
+<p>
+ 美国大选结果至今悬而未决，联邦众议院共和党议员莫·布鲁克斯（Mo Brooks）表示，总统大选的最终结果可能会需要援引美国宪法第12修正案产生。
+</p>
+<p>
+ “国会有绝对的权力拒绝任何一个州提交的选举人团投票（结果），如果我们认为该州的选举系统如此糟糕，以至于你不能相信他们提交给我们的选举结果，”布鲁克斯本周告诉英文《大纪元时报》。
+</p>
+<p>
+ 他表示，如果有任何州所实施的选举制度让他无法产生信任，他就不会支持承认该州递交的结果。
+</p>
 <h3>
  密州韦恩县取消认证 川普：民主党大肆作弊被发现了
 </h3>
