--- a/pages/nf4514/n12560779.md
+++ b/pages/nf4514/n12560779.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新11·19】“拜登当选总统是谎言”" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/10/A4-115-1.jpg"/>
+<div><img alt="【大选更新11·19】朱利安尼：诈欺集中在民主党大城市" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229683262-600x400.jpg"/>
 <div class="caption">
- 资深共和党众议员敦促国会立即举行听证会，以“确认2020大选的公正性”。图为国会大厦。（李莎/大纪元）
+ 川普私人律师、前纽约市长鲁迪·朱利安尼（Rudy Giuliani）于2020年11月19日在华盛顿特区的共和党全国委员会总部举行的新闻发布会上发表讲话。
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
