--- a/pages/soh6/444628.md
+++ b/pages/soh6/444628.md
@@ -263,7 +263,7 @@
   <ok href="/term/1041">
    川普
   </ok>
-  团队律师朱利安尼在11月18日（周三）接受《福克斯新闻》采访时说，美国28个州的选票被发送到德国和西班牙，由委内瑞拉的Smartmatic公司进行计数。“我们的27、28个州的选票被送到美国以外的国家。”他指出，Dominion是一个在加拿大创立的公司，但是这些数据“没有被送往加拿大，而是被送往德国和西班牙。计票的公司不是Dominion，而是Smartmatic——这是一家2005年在委内瑞拉成立的公司，专门用于操纵选举，他们精于此道”。
+  团队律师朱利安尼在11月18日（周三）接受《福克斯新闻》采访时说，美国28个州的选票被发送到德国和西班牙，由委内瑞拉的Smartmatic公司进行计数。他指出，Dominion是一个在加拿大创立的公司，但是这些数据“没有被送往加拿大，而是被送往德国和西班牙。计票的公司不是Dominion，而是Smartmatic——这是一家2005年在委内瑞拉成立的公司，专门用于操纵选举，他们精于此道”。
  </p>
  <h3>
   <ok href="/term/1041">
