--- a/pages/nf4514/n12560779.md
+++ b/pages/nf4514/n12560779.md
@@ -60,6 +60,69 @@
  情况的实时更新：
 </h4>
 <h3>
+ 朱利安尼：川普团队将在乔州提重大诉讼
+</h3>
+<p>
+ 川普（特朗普）总统的律师鲁迪‧朱利安尼（Rudy Giuliani）表示，川普的团队最早将于周五（11月20日）在乔治亚州提起诉讼。
+</p>
+<p>
+ 前纽约市市长朱利安尼在周四（11月19日）的新闻发布会上告诉记者：“我们将在乔治亚州提起重大诉讼。”该诉讼将包括选民欺诈指控以及其它指控。
+</p>
+<p>
+ 他说：“在亚特兰大市，共和党人不被允许监察缺席投票的计票过程，对选票的检查被完全抛在一边，有很多重复投票，有很多州外的选民投票，有实施恐吓和改变选票的具体证据。这些都将在明天的诉讼中公布出来。”
+</p>
+<p>
+ 朱利安尼指出，作为多个“战场州”提交诉讼的一部分，宣誓书中指控称，统一协调操控的选民欺诈阴谋从川普手中窃取了关键州的胜利。
+</p>
+<p>
+ 这位律师还说，川普团队正在考虑在亚利桑那州、弗吉尼亚州和新墨西哥州也提起诉讼。
+</p>
+<p>
+ <ok href="https://www.epochtimes.com/gb/20/11/20/n12562324.htm">
+  详情请阅原文
+ </ok>
+ 。
+</p>
+<h3>
+ 密州韦恩县选举官员遭左派恐吓 川普致电
+</h3>
+<p>
+ 美国密歇根州韦恩县（Wayne County）计票委员会两名共和党委员周三晚撤销计票结果认证。此前，这两人因拒绝认证结果遭到霸凌和恐吓，在被诱骗情况下被迫签字认证。其中一名委员对媒体表示，川普（特朗普）在获知霸凌事件后，致电关心她的安全。
+</p>
+<p>
+ 密歇根州韦恩县计票委员会一名共和党成员周三（11月18日）表示，川普总统在得知她因拒绝认证韦恩县选举结果而遭到恐吓后，给她打电话。
+</p>
+<p>
+ 莫妮卡·帕尔默（Monica Palmer）对《华盛顿邮报》说，“在听到我受到威胁和攻击后，他（川普）致电关心我的安全。”
+</p>
+<p>
+ “他（川普）担心我的安全，这确实令人感动。他真的很忙，感谢他对我的安全感到担忧。”她告诉《华邮》说。
+</p>
+<p>
+ <ok href="https://www.epochtimes.com/gb/20/11/19/n12561889.htm">
+  详情请阅原文
+ </ok>
+ 。
+</p>
+<h3>
+ 川普宾州律师频遭骚扰 退案后才获法院保护令
+</h3>
+<p>
+ 根据周三（18日）晚上发布的法庭文件显示，美国宾夕法尼亚州中区联邦地区法院下令向川普竞选团队的前费城律师琳达·克恩斯（Linda Kerns）提供人身安全保护。
+</p>
+<p>
+ 法官马修·布兰恩（Matthew Brann）在文件中表示，鉴于克恩斯律师在诉讼期间受到威胁与伤害，法院命令警方和美国法警必须保障她的人身安全，同时，还批准了克恩斯撤回作为川普竞选团队的代表律师身份。
+</p>
+<p>
+ 克恩斯于周日（15日）要求法官对Kirkland &amp; Ellis事务所的律师进行裁决，她在一份法庭文件中写道，该事务所的一名律师给她留下了长达1分钟的骚扰和威胁语音邮件，语音内容“无论从哪个角度看，已违反了职业行为标准”。
+</p>
+<p>
+ <ok href="https://www.epochtimes.com/gb/20/11/19/n12561825.htm">
+  详情请阅原文
+ </ok>
+ 。
+</p>
+<h3>
  川普支持者DC遭袭 众议员促举行听证调查
 </h3>
 <p>
@@ -431,12 +494,12 @@
     <h3>
      朱利安尼：费城选举欺诈案件数量可填满一个图书馆
     </h3>
-    <figure class="wp-caption aligncenter" id="attachment_12561837" style="width: 600px">
-     <ok href="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229683370.jpg">
-      <img alt="" class="size-large wp-image-12561837" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229683370-600x400.jpg"/>
+    <figure class="wp-caption aligncenter" id="attachment_12561833" style="width: 600px">
+     <ok href="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229683262.jpg">
+      <img alt="" class="size-large wp-image-12561833" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229683262-600x419.jpg"/>
      </ok>
      <br/><figcaption class="wp-caption-text">
-      川普私人律师、前纽约市长鲁迪·朱利安尼（Rudy Giuliani）于2020年11月19日在华盛顿特区的共和党全国委员会总部举行的新闻发布会上发表讲话。
+      川普团队律师、前纽约市长鲁迪·朱利安尼（Rudy Giuliani）于2020年11月19日在华盛顿特区的共和党全国委员会总部举行的新闻发布会上发表讲话。（MANDEL NGAN/AFP via Getty Images）
      </figcaption><br/>
     </figure><br/>
     <p>
@@ -472,8 +535,6 @@
     <p>
      川普竞选团队评价朱利安尼的讲话“摧毁了‘假新闻’，准确地指出它们包容对目击选举欺诈的美国公民的暴力威胁。”
     </p>
-    <div class="video_fit_container">
-    </div>
     <h3>
      川普：Covid药物治疗效果很棒  媒体很少报导
     </h3>
